BERNSTEIN EPITECH/traefik.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-public
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      restartPolicy: Always
      serviceAccountName: traefik-account
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - traefik
            topologyKey: kubernetes.io/hostname
      containers:
      - name: traefik
        image: traefik:v2.7
        ports:
        - containerPort: 80
          name: web
        - containerPort: 8080
          name: admin
        args:
        - --api.insecure=true
        - --providers.kubernetesingress=true
        - --entrypoints.web.address=:80
        - --log.level=INFO
        - --api.dashboard=true
