BERNSTEIN EPITECH/traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
  namespace: kube-public
spec:
  type: NodePort
  ports:
  - name: web
    port: 80
    targetPort: 80
    nodePort: 30021 
  - name: admin
    port: 8080
    targetPort: 8080
    nodePort: 30042
  selector:
    app: traefik
